kubernetes/db.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 5432
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:9.6
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
