kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: web-service
    servicePort: 80
  tls:
  - secretName: confy-u2i-com-tls
    hosts:
    - confy.u2i.com
